--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -27,5 +27,6 @@
 </table>
 
 <br>
+<%= link_to 'New Order', new_order_path %></br>
+<%= link_to 'Back to home', root_path %>
 
-<%= link_to 'New Order', new_order_path %>
