--- a/app/views/orders/index_order_address_for_change.erb
+++ b/app/views/orders/index_order_address_for_change.erb
@@ -1,3 +1,4 @@
+
 <p id="notice"><%= notice %></p>
 
 <h1>Addresses</h1>
@@ -8,7 +9,7 @@
       
       <th>Consignee_name</th>
       <th>Consignee_address</th>
-      <th>Default?</th>
+      <th>used?</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,15 +22,21 @@
         <td><%= address.consignee_address %></td>
         <td>
           <% if address.id == 
-            current_user.default_address_id %>
-          default
-
-
+            @order.order_address_id %>
+          			using
           <% end %>
 
         </td>
-        <td><%= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to 'Make it default', make_it_default_address_path(address), method: :post %></td>
+        <td>
+       
+        
+		       	<%= link_to 'Use this one',  change_order_address_order_path(@order,
+		       		:changed_address_id => "#{address.id}"), 
+		        	method: :post  %>
+        		
+      	</td>
+
+
 
 
       </tr>
@@ -39,5 +46,5 @@
 
 <br>
 
-<%= link_to 'New Address', new_address_path %></br>
-<%= link_to 'Back to home', root_path %>
+<%= link_to 'Edit my addresses', addresses_path %></br>
+<%= link_to 'Back to order', order_path(@order) %>
